Slider alignments fixed

--- a/src/Views/StaticSite/Views/Courses/Views/TwohundredLandingPage.scss
+++ b/src/Views/StaticSite/Views/Courses/Views/TwohundredLandingPage.scss
@@ -2375,7 +2375,7 @@
 
 .slider-controler {
   position: relative;
-  bottom: 2rem;
+  bottom: 0rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -2456,4 +2456,30 @@
   // margin-bottom: 50px;
   color: rgb(0, 0, 0);
   font-family: "Open Sans";
+}
+
+.swiper-slide img {
+  height: 320px;
+}
+.slide-content {
+  position: absolute;
+  bottom: 15px;
+  left: -95px;
+  right: 0;
+  color: white;
+  padding: 15px;
+  width: 592px;
+  height: 100px;
+}
+
+.slide-content h2 {
+  font-family: 'Open Sans';
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.slide-content p {
+  font-family: 'Open Sans';
+  font-weight: 400;
+  font-size: 18px;
 }
